--- a/wordmania/pubspec.yaml
+++ b/wordmania/pubspec.yaml
@@ -28,10 +28,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/wordmania_logo.png
+    - assets/words_tr.txt
+    - assets/mayinlar/
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/wordmania_logo.png"
-
-
